feat(mini): add account registration
